# xmsg-cpp

./: .mailmap  .travis.yml  CMakeLists.txt  README.md  configure
.github/workflows/: build.yaml
.travis/: install.sh
cmake/: xmsg-config.cmake.in
cmake/Modules/: FindZeroMQ.cmake
doc/: CMakeLists.txt  Doxyfile.in  mainpage.dox
include/xmsg/: address.h  connection.h  connection_pool.h  connection_setup.h  context.h  message.h  proxy.h  subscription.h  util.h  xmsg.h
include/xmsg/proto/: data.h
src/core/: CMakeLists.txt  connection_driver.cpp  connection_driver.h  connection_pool.cpp  connection_setup.cpp  proxy.cpp  registration_driver.cpp  registration_driver.h  subscription.cpp  thread_local.h  util.cpp  xmsg.cpp  xmsg.h  xmsg_address.cpp  xmsg_connection.cpp  xmsg_connection.h  xmsg_connection_impl.h  xmsg_connection_pool.cpp  xmsg_connection_setup.cpp  xmsg_message.h  xmsg_regdis.cpp  xmsg_regdis.h  xmsg_subscription.cpp  xmsg_subscription.h  xmsg_topic.cpp  xmsg_util.cpp  zhelper.cpp  zhelper.h
src/proto/: CMakeLists.txt  xmsg_data.h  xmsg_meta.h  xmsg_registration.h
src/sys/: CMakeLists.txt  cx_proxy.cpp  xmsg_proxy.cpp
test/core/: CMakeLists.txt  helper_proxy.h  helper_registration.h  message_test.cpp  subscription_test.cpp  test_registration.cpp  test_subscription.cpp  topic_test.cpp  util_test.cpp  xmsg_message_test.cpp  xmsg_regdis_test.cpp  xmsg_topic_test.cpp  xmsg_util_test.cpp  zhelper_test.cpp
test/core/helper/: registration.h  utils.h
test/perf/: local_thr.cpp  remote_thr.cpp
